prepare ADMIN role + authentication + API rights