@@ -1,18 +1,20 @@
 package com.trialmaple.security.config;
 
 import com.trialmaple.security.JwtUtils;
+import com.trialmaple.user.UserType;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.jspecify.annotations.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -35,11 +37,12 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
             if (jwtUtils.validateToken(token)) {
                 String discordId = jwtUtils.getDiscordIdFromToken(token);
+                UserType userType = jwtUtils.getUserTypeFromToken(token);
 
                 UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
                         discordId,
                         null,
-                        Collections.emptyList() // Roles/authorizations list (empty for now)
+                        List.of(new SimpleGrantedAuthority("ROLE_" + userType.name()))
                 );
 
                 // Inject user into the Spring security context
